# OpenGL

./: .gitignore  OpenGL.sln  README.md
Dependencies/include/glad/: glad.h
Dependencies/src/: glad.c
Source/: Log.h  Source.cpp  Tools.h
Source/ElementBufferClass/: ElementBufferClass.cpp  ElementBufferClass.h
Source/ShaderClass/: ShaderClass.cpp  ShaderClass.h
Source/Shaders/: Basic.shader
Source/VertexArrayClass/: VertexArrayClass.cpp  VertexArrayClass.h
Source/VertexBufferClass/: VertexBufferClass.cpp  VertexBufferClass.h
Source/VertexBufferLayoutClass/: VertexBufferLayoutClass.cpp  VertexBufferLayoutClass.h
project/: CMakeLists.txt
project/app/: CMakeLists.txt
project/app/include/: element_buffer_class.h  tools.h  vertex_array_class.h  vertex_buffer_class.h  vertex_buffer_layout_class.h
project/app/resources/shaders/: basic.shader
project/app/src/: element_buffer_class.cpp  main.cpp  shader_class.cpp  vertex_array_class.cpp  vertex_buffer_class.cpp  vertex_buffer_layout_class.cpp
